# pytx

./: .gitignore  README.md  pyproject.toml
pytx/: __init__.py  interactor.py  req.py  res.py
tests/: test_interactor.py
