[tool.poetry]
name = "pytx"
version = "0.1.0"
description = ""
authors = ["kentac55 <dev.kentac55@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
pytest = "^5.4.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
